<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_bmi_calculator">

    <fragment
        android:id="@+id/navigation_bmi_calculator"
        android:name="pl.pamo.ui.bmicalculator.BmiCalculatorFragment"
        android:label="@string/title_bmi_calculator"
        tools:layout="@layout/fragment_bmi_calculator" />
    <fragment
        android:id="@+id/navigation_harris_benedict_calculator"
        android:name="pl.pamo.ui.bmrcalculator.BmrCalculator"
        android:label="@string/title_harris_benedict_calculator"
        tools:layout="@layout/fragment_bmi_calculator" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="pl.pamo.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_charts"
        android:name="pl.pamo.ui.chart.ChartFragment"
        android:label="@string/title_charts"
        tools:layout="@layout/fragment_charts" />
</navigation>