<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="5"
    android:clickable="false"
    android:useDefaultMargins="true"
    tools:context="ui.MainActivity">


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="415dp"
        android:layout_height="44dp"
        android:layout_row="0" />

    <Button
        android:id="@+id/countBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:hint="@string/count_btn_message" />

    <EditText
        android:id="@+id/inputWeightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:ems="10"
        android:hint="@string/input_weight_message"
        android:inputType="number" />

    <EditText
        android:id="@+id/inputHeightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:ems="10"
        android:hint="@string/input_height_Message"
        android:inputType="number" />

    <EditText
        android:id="@+id/inputAgeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:ems="10"
        android:hint="@string/input_age_message"
        android:inputType="number" />


    <TextView
        android:id="@+id/scoreView"
        android:layout_width="360dp"
        android:layout_height="33dp"
        android:layout_row="5"
        android:layout_column="0"
        android:textSize="20dp" />


</GridLayout>
