<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="5"
    android:clickable="false"
    android:useDefaultMargins="true"
    tools:context="ui.bmicalculator.BmiCalculatorFragment">


    <Button
        android:id="@+id/countBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:hint="@string/count_btn_message" />

    <EditText
        android:id="@+id/inputWeightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:ems="10"
        android:hint="@string/input_weight_message"
        android:inputType="number" />

    <EditText
        android:id="@+id/inputHeightEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:ems="10"
        android:hint="@string/input_height_Message"
        android:inputType="number" />

    <TextView
        android:id="@+id/scoreView"
        android:layout_width="393dp"
        android:layout_height="42dp"
        android:layout_row="3"
        android:layout_column="0"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/recipeView"
        android:layout_width="411dp"
        android:layout_height="329dp"
        android:layout_row="4"
        android:layout_column="0" />
</GridLayout>
